--- a/src/application.properties
+++ b/src/application.properties
@@ -1,11 +1,11 @@
-#Mon Mar 15 12:37:19 EET 2004
-lastExecuted=Mon Mar 15 12\:37\:18 EET 2004
-last.path=V\:\\ed\\packages
+#Wed Mar 24 12:54:28 EET 2004
+lastExecuted=Wed Mar 24 12\:54\:28 EET 2004
+last.path=C\:\\ed\\packages
 gridStep=10
-paletteFile=../packages/gearbox.xml
+paletteFile=../packages/uml.xml
 documentation.url=http\://vsledit.sourceforge.net
 debugInfo=1
-defaultLayout=3D
+defaultLayout=Metal
 showGrid=0
 generatedFilesDirectory=../generated
-antiAliasing=0
+antiAliasing=1
