--- a/src/application.properties
+++ b/src/application.properties
@@ -1,6 +1,6 @@
-#Wed Mar 24 12:54:28 EET 2004
-lastExecuted=Wed Mar 24 12\:54\:28 EET 2004
-last.path=C\:\\ed\\packages
+#Thu Mar 25 18:16:47 EET 2004
+lastExecuted=Thu Mar 25 18\:16\:46 EET 2004
+last.path=C\:\\msc\\ed\\packages
 gridStep=10
 paletteFile=../packages/uml.xml
 documentation.url=http\://vsledit.sourceforge.net
