--- a/src/application.properties
+++ b/src/application.properties
@@ -1,11 +1,14 @@
-#Thu Mar 25 18:16:47 EET 2004
-lastExecuted=Thu Mar 25 18\:16\:46 EET 2004
-last.path=C\:\\msc\\ed\\packages
-gridStep=10
-paletteFile=../packages/uml.xml
+#Sun May 16 22:46:39 EEST 2004
+lastExecuted=Sun May 16 22\:40\:38 EEST 2004
+last.path=C\:\\msc\\ed\\packages\\classdiag
+nudgeStep=1
+customLayout=com.incors.plaf.kunststoff.KunststoffLookAndFeel
+gridStep=15
+paletteFile=../packages/classdiag/uml.xml
 documentation.url=http\://vsledit.sourceforge.net
-debugInfo=1
 defaultLayout=Metal
+debugInfo=1
 showGrid=0
 generatedFilesDirectory=../generated
 antiAliasing=1
+packageDtd=package2.dtd
