--- a/src/application.properties
+++ b/src/application.properties
@@ -1,14 +1,14 @@
-#Sun May 16 22:46:39 EEST 2004
-lastExecuted=Sun May 16 22\:40\:38 EEST 2004
+#Mon May 17 15:33:59 EEST 2004
+lastExecuted=Mon May 17 15\:32\:26 EEST 2004
 last.path=C\:\\msc\\ed\\packages\\classdiag
 nudgeStep=1
 customLayout=com.incors.plaf.kunststoff.KunststoffLookAndFeel
 gridStep=15
-paletteFile=../packages/classdiag/uml.xml
+paletteFile=../packages/gearbox/gearbox.xml
 documentation.url=http\://vsledit.sourceforge.net
-defaultLayout=Metal
 debugInfo=1
+defaultLayout=Custom
 showGrid=0
-generatedFilesDirectory=../generated
+packageDtd=package.dtd
 antiAliasing=1
-packageDtd=package2.dtd
+generatedFilesDirectory=../generated
