--- a/src/application.properties
+++ b/src/application.properties
@@ -1,14 +1,15 @@
-#Mon May 17 15:33:59 EEST 2004
-lastExecuted=Mon May 17 15\:32\:26 EEST 2004
-last.path=C\:\\msc\\ed\\packages\\classdiag
+lastExecuted=
+last.path=
 nudgeStep=1
 customLayout=com.incors.plaf.kunststoff.KunststoffLookAndFeel
 gridStep=15
-paletteFile=../packages/gearbox/gearbox.xml
+paletteFile=
 documentation.url=http\://vsledit.sourceforge.net
-debugInfo=1
 defaultLayout=Custom
-showGrid=0
-packageDtd=package.dtd
-antiAliasing=1
+debugInfo=1
+recentPackages=
+snapToGrid=0
+showGrid=1
 generatedFilesDirectory=../generated
+antiAliasing=1
+packageDtd=package2.dtd
