compilation and program execution routine has been changed

--- a/src/application.properties
+++ b/src/application.properties
@@ -10,6 +10,7 @@ debugInfo=1
 recentPackages=
 snapToGrid=0
 showGrid=1
+compilationClasspath=;../lib/gnujaxp.jar;../lib/jcommon.jar;../lib/jfreechart.jar
 generatedFilesDirectory=../generated
 antiAliasing=1
 packageDtd=package2.dtd
