Added Ant script for compiling the source, running tests, generating reports and API documentation and distribution files. Some changes to default properties were also necessary.

--- a/src/application.properties
+++ b/src/application.properties
@@ -4,13 +4,14 @@ nudgeStep=1
 customLayout=com.incors.plaf.kunststoff.KunststoffLookAndFeel
 gridStep=15
 paletteFile=
-documentation.url=http\://vsledit.sourceforge.net
+documentation.url="http://www.cs.ioc.ee/~cocovila"
 defaultLayout=Custom
 debugInfo=1
 recentPackages=
 snapToGrid=0
 showGrid=1
-compilationClasspath=;../lib/gnujaxp.jar;../lib/jcommon.jar;../lib/jfreechart.jar
-generatedFilesDirectory=../generated
+compilationClasspath=lib/jcommon.jar;lib/jfreechart.jar
+generatedFilesDirectory=generated
 antiAliasing=1
 packageDtd=package2.dtd
+version=@project.version@
