--- a/src/build.xml
+++ b/src/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="cocovila" default="compile" basedir="../">
+<project name="cocovila" default="compile" basedir="../" xmlns:ivy="antlib:org.apache.ivy.ant">
   <description>
     CoCoViLa - a Compiler Compiler for Visual Languages.
     CoCoViLa provides a framework for developing visual specification languages.
@@ -47,19 +47,47 @@
     <mkdir dir="${dist}"/>
   </target>
 
-
   <!--
-      Dependency management. For now we just assume that
-      everything is present under lib directory and complain
-      when something is missing.
+      Dependency management.
   -->
-
-  <target name="check-dep">
-    <available file="${lib}/ejc.jar" type="file" property="dep.tools.present"/>
+  <target name="resolve" description="--> retrieve dependencies with ivy" depends="init-ivy">
+    <ivy:resolve file="src/ivy.xml"/>
+    <ivy:retrieve pattern="lib/[artifact].[ext]" type="jar"/>
+  </target>
+  
+  <target name="check-dep" depends="resolve">
+    <available file="${lib}/ecj.jar" type="file" property="dep.tools.present"/>
     <available file="${lib}/jcommon.jar" type="file" property="dep.jcommon.present"/>
     <available file="${lib}/jfreechart.jar" type="file" property="dep.jfreechart.present"/>
   </target>
 
+  <property name="ivy.install.version" value="2.3.0" />
+  
+  <condition property="ivy.home" value="${env.IVY_HOME}">
+    <isset property="env.IVY_HOME" />
+  </condition>
+  <property name="ivy.home" value="${user.home}/.ant" />
+  <property name="ivy.jar.dir" value="${ivy.home}/lib" />
+  <property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar" />
+
+  <target name="download-ivy" unless="offline">
+
+    <mkdir dir="${ivy.jar.dir}" />
+    <!-- download Ivy from web site so that it can be used even without any special installation -->
+    <get src="http://repo2.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar" dest="${ivy.jar.file}" usetimestamp="true" />
+  </target>
+
+  <target name="init-ivy" depends="download-ivy">
+    <!-- try to load ivy here from ivy home, in case the user has not already dropped
+	          it into ant's lib dir (note that the latter copy will always take precedence).
+	          We will not fail as long as local lib dir exists (it may be empty) and
+	          ivy is in at least one of ant's lib dir or the local lib dir. -->
+    <path id="ivy.lib.path">
+      <fileset dir="${ivy.jar.dir}" includes="*.jar" />
+    </path>
+    <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
+  </target>
+  
   <target name="build-dep" depends="check-dep">
     <fail message="Cannot find ${lib}/ejc.jar" unless="dep.tools.present"/>
 
