--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-integration</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 
   <build>
