--- a/pom.xml
+++ b/pom.xml
@@ -237,15 +237,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.editor.Editor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.editor.Editor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
@@ -259,15 +257,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.classeditor.ClassEditor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.classeditor.ClassEditor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
