--- a/pom.xml
+++ b/pom.xml
@@ -205,15 +205,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.editor.Editor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.editor.Editor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
@@ -227,15 +225,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.iconeditor.IconEditor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.iconeditor.IconEditor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
