--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,32 @@
             <skip>true</skip>
           </configuration>
         </plugin>
+        <!--This plugin's configuration is used to store Eclipse m2e settings
+         only. It has no influence on the Maven build itself. -->
+        <plugin>
+            <groupId>org.eclipse.m2e</groupId>
+            <artifactId>lifecycle-mapping</artifactId>
+            <version>1.0.0</version>
+            <configuration>
+                <lifecycleMappingMetadata>
+                    <pluginExecutions>
+                        <pluginExecution>
+                            <pluginExecutionFilter>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>properties-maven-plugin</artifactId>
+                                <versionRange>[0.0,)</versionRange>
+                                <goals>
+                                    <goal>read-project-properties</goal>
+                                </goals>
+                            </pluginExecutionFilter>
+                            <action>
+                                <ignore />
+                            </action>
+                        </pluginExecution>
+                    </pluginExecutions>
+                </lifecycleMappingMetadata>
+            </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
