--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     </dependency>
 
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
@@ -231,15 +237,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.editor.Editor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.editor.Editor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
@@ -253,15 +257,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.3.2</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
-              <mainClass>ee.ioc.cs.vsle.classeditor.ClassEditor</mainClass>
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath />
+                <argument>ee.ioc.cs.vsle.classeditor.ClassEditor</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
