--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <parser.generated.src>${basedir}/src/main/java/ee/ioc/cs/vsle/parser/generated</parser.generated.src>
     <parser.generated.package>ee.ioc.cs.vsle.parser.generated</parser.generated.package>
   </properties>
@@ -61,6 +62,7 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-integration</artifactId>
       <version>1.3</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -110,6 +112,23 @@
               <mainClass>ee.ioc.cs.vsle.editor.Editor</mainClass>
             </manifest>
           </archive>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <createDependencyReducedPom>false</createDependencyReducedPom>
         </configuration>
       </plugin>
 
@@ -217,32 +236,6 @@
           <configuration>
             <skip>true</skip>
           </configuration>
-        </plugin>
-        <!--This plugin's configuration is used to store Eclipse m2e settings
-         only. It has no influence on the Maven build itself. -->
-        <plugin>
-            <groupId>org.eclipse.m2e</groupId>
-            <artifactId>lifecycle-mapping</artifactId>
-            <version>1.0.0</version>
-            <configuration>
-                <lifecycleMappingMetadata>
-                    <pluginExecutions>
-                        <pluginExecution>
-                            <pluginExecutionFilter>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>properties-maven-plugin</artifactId>
-                                <versionRange>[0.0,)</versionRange>
-                                <goals>
-                                    <goal>read-project-properties</goal>
-                                </goals>
-                            </pluginExecutionFilter>
-                            <action>
-                                <ignore />
-                            </action>
-                        </pluginExecution>
-                    </pluginExecutions>
-                </lifecycleMappingMetadata>
-            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
